@@ -73,11 +73,13 @@ Features added
 * #623: `sphinx.ext.viewcode` supports imported function/class aliases.
 * PR#275: `sphinx.ext.intersphinx` supports multiple target for the
   inventory. Thanks to Brigitta Sipocz.
+* #1284: Program options documented with :rst:dir:`option` can now start with
+  ``+``.
 
 Bugs fixed
 ----------
 
-* #1568: fix a crash when a "centered" directive contains a reference.
+* #1568: Fix a crash when a "centered" directive contains a reference.
 * #1563: :meth:`~sphinx.application.Sphinx.add_search_language` raises
   AssertionError for correct type of argument. Thanks to rikoman.
 * #1174: Fix smart quotes being applied inside roles like :rst:role:`program` or
